--- a/page/src/styles.css
+++ b/page/src/styles.css
@@ -1,7 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
 }
 
 html {
@@ -25,6 +30,7 @@ details summary {
 #app-root {
   max-width: 1080px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 #wip {
@@ -39,13 +45,22 @@ details summary {
   position: absolute;
   right: 0px;
   height: 300px;
-  opacity: 0.7;
+  opacity: 0.2;
   pointer-events: none;
   padding: 1em 2em;
 }
 
 input {
   background-color: red;
+}
+
+/* Let VirtualizedComboBox looks not like an input. */
+input[type="text"] {
+  caret-color: transparent;
+}
+
+input::selection {
+  background: transparent;
 }
 
 .border-just-wiper {
@@ -96,3 +111,19 @@ details[open] summary {
     color: black;
   }
 } */
+
+#root {
+  height: 100%;
+}
+
+.loading {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-1 {
+  flex: 1;
+}
